--- a/public/index.html
+++ b/public/index.html
@@ -583,60 +583,56 @@
         </center>
       </ul>
     </div>
-    <!--#kebab-pizza-menu.lightbox-->
-    <!--    .ingredients-->
-    <!--        center-->
-    <!--            h4 Menú:-->
-    <!--            p Pizza de kebab +Bebida +Patatas-->
-    <!--            p 5,50€-->
-    <!--            .ingredients__img-->
-    <!--                img(src="assets/img/pizza-min.png")-->
-    <!--                img(src="assets/img/drink-min.png")-->
-    <!--                img(src="assets/img/chips-min.png")-->
-    <!---->
-    <!--#frankfurt-pizza-menu.lightbox-->
-    <!--    .ingredients-->
-    <!--        center-->
-    <!--            h4 Menú:-->
-    <!--            p Pizza de frankfurt +Bebida +Patatas-->
-    <!--            p 5,50€-->
-    <!--            .ingredients__img-->
-    <!--                img(src="assets/img/pizza-min.png")-->
-    <!--                img(src="assets/img/drink-min.png")-->
-    <!--                img(src="assets/img/chips-min.png")-->
-    <!---->
-    <!--#fourcheese-pizza-menu.lightbox-->
-    <!--    .ingredients-->
-    <!--        center-->
-    <!--            h4 Menú:-->
-    <!--            p Pizza cuatro quesos +Bebida +Patatas-->
-    <!--            p 5,50€-->
-    <!--            .ingredients__img-->
-    <!--                img(src="assets/img/pizza-min.png")-->
-    <!--                img(src="assets/img/drink-min.png")-->
-    <!--                img(src="assets/img/chips-min.png")-->
-    <!---->
-    <!--#chickenbacon-pizza-menu.lightbox-->
-    <!--    .ingredients-->
-    <!--        center-->
-    <!--            h4 Menú:-->
-    <!--            p Pizza de pollo y bacon +Bebida +Patatas-->
-    <!--            p 5,50€-->
-    <!--            .ingredients__img-->
-    <!--                img(src="assets/img/pizza-min.png")-->
-    <!--                img(src="assets/img/drink-min.png")-->
-    <!--                img(src="assets/img/chips-min.png")-->
-    <!---->
-    <!--#mini-pizza-menu.lightbox-->
-    <!--    .ingredients-->
-    <!--        center-->
-    <!--            h4 Menú:-->
-    <!--            p Mini-Pizza +Bebida +Patatas-->
-    <!--            p 3,50€-->
-    <!--            .ingredients__img-->
-    <!--                img(src="assets/img/pizza-min.png")-->
-    <!--                img(src="assets/img/drink-min.png")-->
-    <!--                img(src="assets/img/chips-min.png")-->
+    <div class="lightbox" id="kebab-pizza-ingredients">
+      <div class="ingredients">
+        <center>
+          <h4>Menú:</h4>
+          <p>Pizza de kebab +Bebida +Patatas</p>
+          <p>5,50€</p>
+          <div class="ingredients__img"><img src="assets/img/pizza-min.png"/><img src="assets/img/drink-min.png"/><img src="assets/img/chips-min.png"/></div>
+        </center>
+      </div>
+    </div>
+    <div class="lightbox" id="frankfurt-pizza-ingredients">
+      <div class="ingredients">
+        <center>
+          <h4>Menú:</h4>
+          <p>Pizza de frankfurt +Bebida +Patatas</p>
+          <p>5,50€</p>
+          <div class="ingredients__img"><img src="assets/img/pizza-min.png"/><img src="assets/img/drink-min.png"/><img src="assets/img/chips-min.png"/></div>
+        </center>
+      </div>
+    </div>
+    <div class="lightbox" id="fourcheese-pizza-ingredients">
+      <div class="ingredients">
+        <center>
+          <h4>Menú:</h4>
+          <p>Pizza cuatro quesos +Bebida +Patatas</p>
+          <p>5,50€</p>
+          <div class="ingredients__img"><img src="assets/img/pizza-min.png"/><img src="assets/img/drink-min.png"/><img src="assets/img/chips-min.png"/></div>
+        </center>
+      </div>
+    </div>
+    <div class="lightbox" id="chickenbacon-pizza-ingredients">
+      <div class="ingredients">
+        <center>
+          <h4>Menú:</h4>
+          <p>Pizza de pollo y bacon +Bebida +Patatas</p>
+          <p>5,50€</p>
+          <div class="ingredients__img"><img src="assets/img/pizza-min.png"/><img src="assets/img/drink-min.png"/><img src="assets/img/chips-min.png"/></div>
+        </center>
+      </div>
+    </div>
+    <div class="lightbox" id="mini-pizza-ingredients">
+      <div class="ingredients">
+        <center>
+          <h4>Menú:</h4>
+          <p>Mini-Pizza +Bebida +Patatas</p>
+          <p>3,50€</p>
+          <div class="ingredients__img"><img src="assets/img/pizza-min.png"/><img src="assets/img/drink-min.png"/><img src="assets/img/chips-min.png"/></div>
+        </center>
+      </div>
+    </div>
     <div class="lightbox" id="york-panini-ingredients">
       <ul class="ingredients">
         <h3>Ingredientes panini york:</h3>
