--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,10 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
+    <meta property="og:site_name" content="CUKY'S"/>
+    <meta property="og:title" content="CUKY'S"/>
+    <meta property="og:description" content="Carta menú Cuky's"/>
+    <meta property="og:image" content="assets/img/cukys.png"/>
     <link rel="stylesheet" href="css/styles.css"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous"/>
     <title>Cukys</title>
