Correciones de fallos

--- a/public/index.html
+++ b/public/index.html
@@ -316,7 +316,11 @@
     <div class="lightbox" id="vegetable-baguette-ingredients">
       <ul class="ingredients">
         <h3>Ingredientes baguette vegetal:</h3>
-        <li></li>
+        <li>cangrejo</li>
+        <li>atún</li>
+        <li>tomate</li>
+        <li>lechuga</li>
+        <li>mahonesa</li>
         <center>
           <h4>Alérgenos:</h4><img class="ingredients__allergen" src="assets/img/gallery/gluten.svg" alt="gluten"/><img class="ingredients__allergen" src="assets/img/gallery/crustaceans.svg" alt="crustaceans"/><img class="ingredients__allergen" src="assets/img/gallery/fish.svg" alt="fish"/><img class="ingredients__allergen" src="assets/img/gallery/egg.svg" alt="egg"/><img class="ingredients__allergen" src="assets/img/gallery/dairyProducts.svg" alt="dairy products"/><img class="ingredients__allergen" src="assets/img/gallery/sulfurDioxideSulphites.svg" alt="sulfur dioxide sulphites"/>
           <h3>Con menú:
@@ -590,7 +594,9 @@
     <div class="lightbox" id="kebab-pizza-ingredients">
       <ul class="ingredients">
         <h3>Ingredientes pizza de kebab:</h3>
-        <li>ingredientes</li>
+        <li>tomate</li>
+        <li>queso</li>
+        <li>pollo kebab</li>
         <center>
           <h4>Alérgenos:</h4><img class="ingredients__allergen" src="assets/img/gallery/gluten.svg" alt="gluten"/><img class="ingredients__allergen" src="assets/img/gallery/dairyProducts.svg" alt="dairy products"/><img class="ingredients__allergen" src="assets/img/gallery/sulfurDioxideSulphites.svg" alt="sulfur dioxide sulphites"/>
           <h3>Con menú:
@@ -604,7 +610,9 @@
     <div class="lightbox" id="frankfurt-pizza-ingredients">
       <ul class="ingredients">
         <h3>Ingredientes pizza de frankfurt:</h3>
-        <li>ingredientes</li>
+        <li>tomate</li>
+        <li>queso</li>
+        <li>salchichas de frankfurt</li>
         <center>
           <h4>Alérgenos:</h4><img class="ingredients__allergen" src="assets/img/gallery/gluten.svg" alt="gluten"/><img class="ingredients__allergen" src="assets/img/gallery/dairyProducts.svg" alt="dairy products"/><img class="ingredients__allergen" src="assets/img/gallery/sulfurDioxideSulphites.svg" alt="sulfur dioxide sulphites"/>
           <h3>Con menú:
@@ -618,7 +626,10 @@
     <div class="lightbox" id="fourcheese-pizza-ingredients">
       <ul class="ingredients">
         <h3>Ingredientes pizza de cuatro quesos:</h3>
-        <li>ingredientes</li>
+        <li>mozzarela</li>
+        <li>emental</li>
+        <li>edar</li>
+        <li>chedar</li>
         <center>
           <h4>Alérgenos:</h4><img class="ingredients__allergen" src="assets/img/gallery/gluten.svg" alt="gluten"/><img class="ingredients__allergen" src="assets/img/gallery/dairyProducts.svg" alt="dairy products"/><img class="ingredients__allergen" src="assets/img/gallery/sulfurDioxideSulphites.svg" alt="sulfur dioxide sulphites"/>
           <h3>Con menú:
@@ -632,7 +643,10 @@
     <div class="lightbox" id="baconchicken-pizza-ingredients">
       <ul class="ingredients">
         <h3>Ingredientes pizza de pollo y bacon:</h3>
-        <li></li>
+        <li>tomate</li>
+        <li>queso</li>
+        <li>pollo</li>
+        <li>bacon</li>
         <center>
           <h4>Alérgenos:</h4><img class="ingredients__allergen" src="assets/img/gallery/gluten.svg" alt="gluten"/><img class="ingredients__allergen" src="assets/img/gallery/dairyProducts.svg" alt="dairy products"/><img class="ingredients__allergen" src="assets/img/gallery/sulfurDioxideSulphites.svg" alt="sulfur dioxide sulphites"/>
           <h3>Con menú:
@@ -646,7 +660,9 @@
     <div class="lightbox" id="mini-pizza-ingredients">
       <ul class="ingredients">
         <h3>Ingredientes mini-pizza:</h3>
-        <li>ingredientes</li>
+        <li>jamón york</li>
+        <li>queso</li>
+        <li>tomate</li>
         <center>
           <h4>Alérgenos:</h4><img class="ingredients__allergen" src="assets/img/gallery/gluten.svg" alt="gluten"/><img class="ingredients__allergen" src="assets/img/gallery/dairyProducts.svg" alt="dairy products"/><img class="ingredients__allergen" src="assets/img/gallery/sulfurDioxideSulphites.svg" alt="sulfur dioxide sulphites"/>
           <h3>Con menú:
