Update prices and some style chenges

--- a/public/index.html
+++ b/public/index.html
@@ -747,7 +747,7 @@
           <h4>Alérgenos:</h4><img class="ingredients__allergen" src="assets/img/gallery/gluten.svg" alt="gluten"/><img class="ingredients__allergen" src="assets/img/gallery/sulfurDioxideSulphites.svg" alt="sulfur dioxide sulphites"/>
           <h3>Con menú:</h3>
           <p>Nuggets +Bebida +Patatas</p>
-          <p>3,80€</p>
+          <p>4,00€</p>
           <div class="ingredients__img"><img src="assets/img/fried-min.png"/><img src="assets/img/drink-min.png"/><img src="assets/img/chips-min.png"/></div>
         </center>
       </div>
@@ -758,7 +758,7 @@
           <h4>Alérgenos:</h4><img class="ingredients__allergen" src="assets/img/gallery/gluten.svg" alt="gluten"/><img class="ingredients__allergen" src="assets/img/gallery/dairyProducts.svg" alt="dairy products"/><img class="ingredients__allergen" src="assets/img/gallery/sulfurDioxideSulphites.svg" alt="sulfur dioxide sulphites"/>
           <h3>Con menú:</h3>
           <p>Croquetas +Bebida +Patatas</p>
-          <p>6,50€</p>
+          <p>7,00€</p>
           <div class="ingredients__img"><img src="assets/img/fried-min.png"/><img src="assets/img/drink-min.png"/><img src="assets/img/chips-min.png"/></div>
         </center>
       </div>
@@ -769,7 +769,7 @@
           <h4>Alérgenos:</h4><img class="ingredients__allergen" src="assets/img/gallery/gluten.svg" alt="gluten"/><img class="ingredients__allergen" src="assets/img/gallery/fish.svg" alt="fish"/><img class="ingredients__allergen" src="assets/img/gallery/sulfurDioxideSulphites.svg" alt="sulfur dioxide sulphites"/>
           <h3>Con menú:</h3>
           <p>Empanadillas +Bebida +Patatas</p>
-          <p>3,80€</p>
+          <p>4,00€</p>
           <div class="ingredients__img"><img src="assets/img/fried-min.png"/><img src="assets/img/drink-min.png"/><img src="assets/img/chips-min.png"/></div>
         </center>
       </div>
@@ -780,7 +780,7 @@
           <h4>Alérgenos:</h4><img class="ingredients__allergen" src="assets/img/gallery/gluten.svg" alt="gluten"/><img class="ingredients__allergen" src="assets/img/gallery/dairyProducts.svg" alt="dairy products"/><img class="ingredients__allergen" src="assets/img/gallery/sulfurDioxideSulphites.svg" alt="sulfur dioxide sulphites"/>
           <h3>Con menú:</h3>
           <p>San jacobos +Bebida +Patatas</p>
-          <p>3,80€</p>
+          <p>4,00€</p>
           <div class="ingredients__img"><img src="assets/img/fried-min.png"/><img src="assets/img/drink-min.png"/><img src="assets/img/chips-min.png"/></div>
         </center>
       </div>
@@ -791,18 +791,7 @@
           <h4>Alérgenos:</h4><img class="ingredients__allergen" src="assets/img/gallery/gluten.svg" alt="gluten"/><img class="ingredients__allergen" src="assets/img/gallery/mollusks.svg" alt="mollusks"/><img class="ingredients__allergen" src="assets/img/gallery/sulfurDioxideSulphites.svg" alt="sulfur dioxide sulphites"/>
           <h3>Con menú:</h3>
           <p>Twister +Bebida +Patatas</p>
-          <p>7,30€</p>
-          <div class="ingredients__img"><img src="assets/img/fried-min.png"/><img src="assets/img/drink-min.png"/><img src="assets/img/chips-min.png"/></div>
-        </center>
-      </div>
-    </div>
-    <div class="lightbox" id="fingers-starter-allergens">
-      <div class="ingredients">
-        <center>
-          <h4>Alérgenos:</h4><img class="ingredients__allergen" src="assets/img/gallery/gluten.svg" alt="gluten"/><img class="ingredients__allergen" src="assets/img/gallery/sulfurDioxideSulphites.svg" alt="sulfur dioxide sulphites"/>
-          <h3>Con menú:</h3>
-          <p>Fingers +Bebida +Patatas</p>
-          <p>4,80€</p>
+          <p>7,50€</p>
           <div class="ingredients__img"><img src="assets/img/fried-min.png"/><img src="assets/img/drink-min.png"/><img src="assets/img/chips-min.png"/></div>
         </center>
       </div>
@@ -813,7 +802,7 @@
           <h4>Alérgenos:</h4><img class="ingredients__allergen" src="assets/img/gallery/gluten.svg" alt="gluten"/><img class="ingredients__allergen" src="assets/img/gallery/mollusks.svg" alt="mollusks"/>
           <h3>Con menú:</h3>
           <p>Torpedo +Bebida +Patatas</p>
-          <p>7,30€</p>
+          <p>7,50€</p>
           <div class="ingredients__img"><img src="assets/img/fried-min.png"/><img src="assets/img/drink-min.png"/><img src="assets/img/chips-min.png"/></div>
         </center>
       </div>
@@ -824,7 +813,7 @@
           <h4>Alérgenos:</h4><img class="ingredients__allergen" src="assets/img/gallery/gluten.svg" alt="gluten"/><img class="ingredients__allergen" src="assets/img/gallery/mollusks.svg" alt="mollusks"/>
           <h3>Con menú:</h3>
           <p>Delicias de pollo +Bebida +Patatas</p>
-          <p>4,80€</p>
+          <p>5,00€</p>
           <div class="ingredients__img"><img src="assets/img/fried-min.png"/><img src="assets/img/drink-min.png"/><img src="assets/img/chips-min.png"/></div>
         </center>
       </div>
@@ -832,10 +821,10 @@
     <div class="lightbox" id="flamenquins-starter-allergens">
       <div class="ingredients">
         <center>
-          <h4>Alérgenos:</h4><img class="ingredients__allergen" src="assets/img/gallery/gluten.svg" alt="gluten"/><img class="ingredients__allergen" src="assets/img/gallery/mollusks.svg" alt="mollusks"/>
+          <h4>Alérgenos:</h4><img class="ingredients__allergen" src="assets/img/gallery/gluten.svg" alt="gluten"/><img class="ingredients__allergen" src="assets/img/gallery/dairyProducts.svg" alt="dairy products"/><img class="ingredients__allergen" src="assets/img/gallery/sulfurDioxideSulphites.svg" alt="sulfur dioxide sulphites"/>
           <h3>Con menú:</h3>
           <p>Flamenquines +Bebida +Patatas</p>
-          <p>3,80€</p>
+          <p>4,00€</p>
           <div class="ingredients__img"><img src="assets/img/fried-min.png"/><img src="assets/img/drink-min.png"/><img src="assets/img/chips-min.png"/></div>
         </center>
       </div>
@@ -846,7 +835,7 @@
           <h4>Alérgenos:</h4><img class="ingredients__allergen" src="assets/img/gallery/gluten.svg" alt="gluten"/><img class="ingredients__allergen" src="assets/img/gallery/mollusks.svg" alt="mollusks"/>
           <h3>Con menú:</h3>
           <p>Palomitas de pollo +Bebida +Patatas</p>
-          <p>5,00€</p>
+          <p>5,50€</p>
           <div class="ingredients__img"><img src="assets/img/fried-min.png"/><img src="assets/img/drink-min.png"/><img src="assets/img/chips-min.png"/></div>
         </center>
       </div>
@@ -857,7 +846,7 @@
           <h4>Alérgenos:</h4><img class="ingredients__allergen" src="assets/img/gallery/gluten.svg" alt="gluten"/><img class="ingredients__allergen" src="assets/img/gallery/mollusks.svg" alt="mollusks"/>
           <h3>Con menú:</h3>
           <p>Tiras de pollo +Bebida +Patatas</p>
-          <p>5,00€</p>
+          <p>5,50€</p>
           <div class="ingredients__img"><img src="assets/img/fried-min.png"/><img src="assets/img/drink-min.png"/><img src="assets/img/chips-min.png"/></div>
         </center>
       </div>
@@ -865,11 +854,7 @@
     <div class="lightbox" id="prawnsinbatter-starter-allergens">
       <div class="ingredients">
         <center>
-          <h4>Alérgenos:</h4><img class="ingredients__allergen" src="assets/img/gallery/gluten.svg" alt="gluten"/><img class="ingredients__allergen" src="assets/img/gallery/mollusks.svg" alt="mollusks"/>
-          <h3>Con menú:</h3>
-          <p>Gambas rebozadas +Bebida +Patatas</p>
-          <p>12,00€</p>
-          <div class="ingredients__img"><img src="assets/img/fried-min.png"/><img src="assets/img/drink-min.png"/><img src="assets/img/chips-min.png"/></div>
+          <h4>Alérgenos:</h4><img class="ingredients__allergen" src="assets/img/gallery/gluten.svg" alt="gluten"/><img class="ingredients__allergen" src="assets/img/gallery/mollusks.svg" alt="mollusks"/><img class="ingredients__allergen" src="assets/img/gallery/sulfurDioxideSulphites.svg" alt="sulfur dioxide sulphites"/>
         </center>
       </div>
     </div>
@@ -930,26 +915,23 @@
           <li><span class="item1">twister (10 unidades)</span>
             <button class="item2" type="button" id="info-starter-4" data-name="starter">HAZLO MENÚ / +INFO<i class="fas fa-hand-pointer"></i></button><span class="item3">6,00€</span>
           </li>
-          <li><span class="item1">fingers (6 unidades)</span>
-            <button class="item2" type="button" id="info-starter-5" data-name="starter">HAZLO MENÚ / +INFO<i class="fas fa-hand-pointer"></i></button><span class="item3">3,00€</span>
-          </li>
           <li><span class="item1">torpedo (12 unidades)</span>
-            <button class="item2" type="button" id="info-starter-6" data-name="starter">HAZLO MENÚ / +INFO<i class="fas fa-hand-pointer"></i></button><span class="item3">6,00€</span>
+            <button class="item2" type="button" id="info-starter-5" data-name="starter">HAZLO MENÚ / +INFO<i class="fas fa-hand-pointer"></i></button><span class="item3">6,00€</span>
           </li>
           <li><span class="item1">delicias de pollo</span>
-            <button class="item2" type="button" id="info-starter-7" data-name="starter">HAZLO MENÚ / +INFO<i class="fas fa-hand-pointer"></i></button><span class="item3">3,00€</span>
+            <button class="item2" type="button" id="info-starter-6" data-name="starter">HAZLO MENÚ / +INFO<i class="fas fa-hand-pointer"></i></button><span class="item3">3,00€</span>
           </li>
           <li><span class="item1">flamenquines</span>
-            <button class="item2" type="button" id="info-starter-8" data-name="starter">HAZLO MENÚ / +INFO<i class="fas fa-hand-pointer"></i></button><span class="item3">2,20€</span>
+            <button class="item2" type="button" id="info-starter-7" data-name="starter">HAZLO MENÚ / +INFO<i class="fas fa-hand-pointer"></i></button><span class="item3">2,20€</span>
           </li>
           <li><span class="item1">palomitas de pollo</span>
-            <button class="item2" type="button" id="info-starter-9" data-name="starter">HAZLO MENÚ / +INFO<i class="fas fa-hand-pointer"></i></button><span class="item3">3,50€</span>
+            <button class="item2" type="button" id="info-starter-8" data-name="starter">HAZLO MENÚ / +INFO<i class="fas fa-hand-pointer"></i></button><span class="item3">3,50€</span>
           </li>
           <li><span class="item1">tiras de pollo</span>
-            <button class="item2" type="button" id="info-starter-10" data-name="starter">HAZLO MENÚ / +INFO<i class="fas fa-hand-pointer"></i></button><span class="item3">3,50€</span>
+            <button class="item2" type="button" id="info-starter-9" data-name="starter">HAZLO MENÚ / +INFO<i class="fas fa-hand-pointer"></i></button><span class="item3">3,50€</span>
           </li>
           <li><span class="item1">gambas rebozadas</span>
-            <button class="item2" type="button" id="info-starter-11" data-name="starter">HAZLO MENÚ / +INFO<i class="fas fa-hand-pointer"></i></button><span class="item3">10,00€</span>
+            <button class="item2" type="button" id="info-starter-10" data-name="starter">+INFO<i class="fas fa-hand-pointer"></i></button><span class="item3">10,00€</span>
           </li>
         </ol>
         <div class="products__image"><img src="assets/img/fried.png" alt="starter"/></div>
